# rustLibrarySite

rustLibrarySite/src/: config.rs  db.rs  main.rs
rustLibrarySite/templates/: base.html  login.html
social_network/: Cargo.toml
social_network/templates/: index.html  register.html
