[package]
name = "social_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
dotenv = "0.15.0"
rusqlite = "0.31.0"
serde = "1.0.199"
serde_json = "1.0.116"
serde_derive = "1.0.199"
actix-files = "0.6.5"
tera = "1.19.1"
actix-service = "2.0.2"
futures = "0.3"
json = "0.12.4"
bcrypt = "0.10.0"
lazy_static = "1.4.0"
r2d2 = "0.8"
r2d2_sqlite = "0.24"
lru = "0.12.3"
once_cell = "1.19.0"
